Ported over all the gui functionality, but now it all needs to be super debugged.